nova_tests/negative_capability/for_in_iter_diagnostic.nv
// EXPECT_COMPILE_ERROR Searched method_overloads
//
// Plan 39 Issue D: verify улучшенная диагностика fall-through Case 3.
// Должна показывать **explicit listing methods searched** + hint.
//
// Спецификация diagnostic'а (D58 + Plan 39 Issue D):
//   "for-in: type 'X' has neither `mut next() -> Option[T]` nor
//    `iter() -> Iterable[T]` methods (D58).
//    Searched method_overloads: (X, "next")=false, (X, "iter")=false
//    Hint: add one of the methods, or use `for x in c.iter()` if
//    iterator is created externally."

module negative_capability.for_in_iter_diagnostic

type Empty { value int }

fn main() -> int {
    ro e = Empty { value: 1 }
    for x in e {
        ro _ = x
    }
    0
}
